[project]
name = "lockss-debugpanel"
version = "0.8.0-dev1"
description = "Python and tool to interact with the LOCKSS 1.x DebugPanel servlet"
authors = [
    { name = "Thib Guicherd-Callin",  email = "thib@cs.stanford.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.rst"
requires-python = ">=3.9,<4.0"
dependencies = [
    "lockss-pybasic (>=0.1.0.dev12,<0.2.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "pydantic-argparse (>=0.10.0,<0.11.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[tool.poetry]
packages = [
    { include = "lockss", from = "src" }
]

[tool.poetry.scripts]
debugpanel = 'lockss.debugpanel.cli:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
